@@ -20,6 +20,7 @@
 	- 32-bit: ARMv7/armhf
 	- 64-bit: ARMv8/AArch64
 - API Change: Removed arm abi from SharedLibraryLoader
+- API Change: Enabling fullscreen mode on the lwjgl3 backend now automatically sets the vsync setting again.
 
 [1.9.11]
 - Update to MobiVM 2.3.8
